- Add instruction to send text message - Remove annoying message

--- a/olympic_kmeans.ipynb
+++ b/olympic_kmeans.ipynb
@@ -94,7 +94,6 @@
     "    usecols=[\n",
     "        'Name',\n",
     "        'Sex',\n",
-    "        'Age',\n",
     "        'Height',\n",
     "        'Weight',\n",
     "        'Sport',\n",
@@ -225,7 +224,7 @@
    "source": [
     "## Chapter 3: Clustering!\n",
     "\n",
-    "Now that we have data that should filter into two groups (Men's Basketball and Women's Gymnastics), it's time to cluster. We are using scikit-learn's `KMeans` method. We need to pass in an `n_clusters` argument to tell it how many centroids to cluster around.\n",
+    "Now that we have data that should filter into two groups (Men's Basketball and Women's Gymnastics), it's time to cluster. We are using scikit-learn's `KMeans` method to create a KMeans model. We need to pass in an `n_clusters` argument to tell it how many centroids to cluster around.\n",
     "\n",
     "We want to call the `fit()` method passing in the DataFrame columns that we want the clustering algorithm to use, in this case: `Weight` and `Height`."
    ]
@@ -247,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recall that part of the k-means algorithm involves updating the location of the centroids until none of the data points change cluster. Let's see how many iterations ran:"
+    "Recall that part of the k-means algorithm involves updating the location of the centroids until none of the data points change cluster. Let's see how many iterations it took to find the final centroids:"
    ]
   },
   {
@@ -279,7 +278,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's add a column to our `two_sports` DataFrame that will show the cluster that each athlete should be assigned to."
+    "It's important to note that the KMeans algorithm just clustered our data based on the two columns of data (`Weight` and `Height`). It has no concept of which `Sport` each athlete competed in.\n",
+    "\n",
+    "Let's add a column to our `two_sports` DataFrame that will show which cluster each athlete should be assigned to. This is the output of the `KMeans` class's `predict()` method."
    ]
   },
   {
@@ -288,15 +289,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# two_sports['prediction'] = clustered_data.predict(two_sports[['Height', 'Weight']])\n",
-    "two_sports.loc[:, \"prediction\"] = kmeans_model.predict(two_sports.loc[:, ['Weight', 'Height']])"
+    "predictions = kmeans_model.predict(two_sports[['Weight', 'Height']])\n",
+    "two_sports = two_sports.assign(prediction=predictions)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To verify, we can look at a few of the rows to see where each athlete is predicted to fall. We could do this with `head()` like we did we above, but let's try slicing the DataFrame with `iloc`."
+    "Now that we've added this extra column, we can look at a few of the rows to see where each athlete is predicted to fall. We could do this with `head()` like we did we above, but let's try slicing the DataFrame with `iloc`."
    ]
   },
   {
@@ -382,7 +383,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?"
+    "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?\n",
+    "\n",
+    "Text me at MY_NUMBER to tell me which sport you're more likely to compete in!"
    ]
   }
  ],
