Update prediction function, remove requirements.txt

--- a/olympic_kmeans.ipynb
+++ b/olympic_kmeans.ipynb
@@ -375,8 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter your weight and height to predict which cluster you fall into.\n",
-    "kmeans_model.predict([[<YOUR_WEIGHT>, <YOUR_HEIGHT>]])"
+    "# Substitute your own weight (in kg) and height (in cm) to predict which cluster you fall into.\n",
+    "kmeans_model.predict([[68, 160]])"
    ]
   },
   {
