Add extra exercises to the end

--- a/olympic_kmeans.ipynb
+++ b/olympic_kmeans.ipynb
@@ -113,109 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Sport</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A Dijiang</td>\n",
-       "      <td>M</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>Basketball</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A Lamusi</td>\n",
-       "      <td>M</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>Judo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Christine Jacoba Aaftink</td>\n",
-       "      <td>F</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>Speed Skating</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Per Knut Aaland</td>\n",
-       "      <td>M</td>\n",
-       "      <td>188.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>John Aalberg</td>\n",
-       "      <td>M</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        Name Sex  Height  Weight           Team  \\\n",
-       "0                  A Dijiang   M   180.0    80.0          China   \n",
-       "1                   A Lamusi   M   170.0    60.0          China   \n",
-       "4   Christine Jacoba Aaftink   F   185.0    82.0    Netherlands   \n",
-       "10           Per Knut Aaland   M   188.0    75.0  United States   \n",
-       "18              John Aalberg   M   183.0    72.0  United States   \n",
-       "\n",
-       "                   Sport  \n",
-       "0             Basketball  \n",
-       "1                   Judo  \n",
-       "4          Speed Skating  \n",
-       "10  Cross Country Skiing  \n",
-       "18  Cross Country Skiing  "
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# By default, will return the first 5 rows\n",
     "olympian_data.head()"
@@ -462,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter 5: Go to the Olympics!\n",
+    "## Chapter 5: Go to the Olympics and beyond\n",
     "\n",
     "Every two years, I watch the Olympics and decide that I am destined for athletic glory. Maybe you do too! \n",
     "\n",
@@ -485,7 +385,12 @@
    "source": [
     "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?\n",
     "\n",
-    "Text me at MY_NUMBER to tell me which sport you're more likely to compete in!"
+    "**For fun**: Text me at MY_NUMBER to tell me which sport you're more likely to compete in!\n",
+    "\n",
+    "You've just learned about k-means clustering and scratched the surface of data science tools like pandas and Jupyter Notebooks. Here are some ideas to play around with the data:\n",
+    "* Filter the data by Team before running the algorithm.\n",
+    "* Try filtering the data with more than two sports and changing the *k* value accordingly.\n",
+    "* Remove the filter by Sex. Does the data cluster more or less cleanly now? Why?"
    ]
   }
  ],
