--- a/olympic_kmeans_follow_along.ipynb
+++ b/olympic_kmeans_follow_along.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter 5: Go to the Olympics!\n",
+    "## Chapter 5: Go to the Olympics and beyond\n",
     "\n",
     "Every two years, I watch the Olympics and decide that I am destined for athletic glory. Maybe you do too! \n",
     "\n",
@@ -381,7 +381,16 @@
    "source": [
     "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?\n",
     "\n",
-    "Text me at {{MY_NUMBER}} to tell me which sport you're more likely to compete in!"
+    "Text me at {{MY_NUMBER}} to tell me which sport you're more likely to compete in!\n",
+    "\n",
+    "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?\n",
+    "\n",
+    "**For fun**: Text me at MY_NUMBER to tell me which sport you're more likely to compete in!\n",
+    "\n",
+    "You've just learned about k-means clustering and scratched the surface of data science tools like pandas and Jupyter Notebooks. Here are some ideas to play around with the data:\n",
+    "* Filter the data by Team before running the algorithm.\n",
+    "* Try filtering the data with more than two sports and changing the *k* value accordingly.\n",
+    "* Remove the filter by Sex. Does the data cluster more or less cleanly now? Why?"
    ]
   }
  ],
