--- a/olympic_kmeans_follow_along.ipynb
+++ b/olympic_kmeans_follow_along.ipynb
@@ -44,7 +44,9 @@
     "For this workshop, we'll be working with Olympic athlete statistics because:\n",
     "1. We can easily separate two dimensions (height and weight). There's no need for \"dimensionality reduction\" (combining multiple features into N dimensions).\n",
     "2. Based on those two features, the data separates easily into distinct groups.\n",
-    "3. The Olympics are really exciting!"
+    "3. The Olympics are really exciting!\n",
+    "\n",
+    "![Jang Mi-ran | Tessa Virtue & Scott Moir](static/jang_virtue_moir.png) "
    ]
   },
   {
