Update text on olympic kmeans

--- a/olympic_kmeans.ipynb
+++ b/olympic_kmeans.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For maximal clustering, let's filter out two sports where the athletes might diverge greatly by height and weight. How about Basketball and Gymnastics? What if we separated by Men's and Women's teams as well?"
+    "For maximal clustering, let's narrow down the dataset so that it contains two sports where the athletes might diverge greatly by height and weight. How about Basketball and Gymnastics? What if we separated by Men's and Women's teams as well?"
    ]
   },
   {
