Make clean follow_along version

--- a/olympic_kmeans_follow_along.ipynb
+++ b/olympic_kmeans_follow_along.ipynb
@@ -85,18 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a pandas DataFrame object from a CSV of Olympian data\n",
-    "olympian_data = pd.read_csv(\n",
-    "    'data/athlete_events.csv',\n",
-    "    usecols=[\n",
-    "        'Name',\n",
-    "        'Sex',\n",
-    "        'Height',\n",
-    "        'Weight',\n",
-    "        'Sport',\n",
-    "        'Team',\n",
-    "    ],\n",
-    ")"
+    "# Create a pandas DataFrame object from a CSV of Olympian data in 'data/athlete_events.csv'\n",
+    "# use columns = ['Name', 'Sex', 'Height', 'Weight', 'Sport', 'Team']\n"
    ]
   },
   {
@@ -149,8 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pass in a list of columns where you want to remove duplicate values\n",
-    "olympian_data = olympian_data.drop_duplicates(subset=['Name', 'Sport'])"
+    "# Pass in a list of columns where you want to remove duplicate values\n"
    ]
   },
   {
@@ -166,8 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove rows with missing values using the dropna() method\n",
-    "olympian_data.dropna(inplace=True)"
+    "# Remove rows with missing values using the dropna() method\n"
    ]
   },
   {
@@ -198,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For maximal clustering, let's filter out two sports where the athletes might diverge greatly by height and weight. How about Basketball and Gymnastics? What if we separated by Men's and Women's teams as well?"
+    "For maximal clustering, let's narrow down the dataset so that it contains two sports where the athletes might diverge greatly by height and weight. How about Basketball and Gymnastics? What if we separated by Men's and Women's teams as well?"
    ]
   },
   {
@@ -207,10 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "two_sports = olympian_data[((olympian_data.Sport == 'Basketball') \n",
-    "                            & (olympian_data.Sex == 'M')) | \n",
-    "                           ((olympian_data.Sport == 'Gymnastics') \n",
-    "                            & (olympian_data.Sex == 'F'))]"
+    "# Use filtering conditions to make a new dataframe containing data from\n",
+    "# Men's Basketball and Women's Gymnastics \n"
    ]
   },
   {
@@ -230,11 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans_model = KMeans(\n",
-    "    n_clusters=2\n",
-    ").fit(\n",
-    "    two_sports[['Weight', 'Height']]\n",
-    ")"
+    "# create a variable kmeans_model and set it equal to the output of KMeans()\n",
+    "# with 2 clusters and fit to two sports[['Weight', 'Height']]\n"
    ]
   },
   {
@@ -285,7 +268,7 @@
    "outputs": [],
    "source": [
     "# Use the predict() method, passing in two_sports[['Weight', 'Height']]\n",
-    "predictions = YOUR_CODE_HERE\n",
+    "\n",
     "\n",
     "# Assign the \"prediction\" column to the predictions array with the assign() method\n"
    ]
@@ -320,15 +303,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fill in the missing values:\n",
-    "seaborn.scatterplot(\n",
-    "    '<X-AXIS>',\n",
-    "    '<Y-AXIS>',\n",
-    "    data=two_sports[['Weight', 'Height', 'Sport']],\n",
-    "    hue=\"<WHAT SHOULD WE COLOR BY?>\",\n",
-    ")\n",
-    "# Give it a cool title\n",
-    "plt.title('<TITLE>')"
+    "# create a seaborn scatterplot for our original two_sports data\n",
+    "\n",
+    "# Give it a title\n"
    ]
   },
   {
@@ -346,14 +323,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seaborn.scatterplot(\n",
-    "    '<X-AXIS>',\n",
-    "    '<Y-AXIS>',\n",
-    "    data=two_sports[['Weight', 'Height', 'Prediction']],\n",
-    "    hue=\"<WHAT SHOULD WE COLOR BY?>\"\n",
-    ")\n",
-    "# Give it a more different title\n",
-    "plt.title('<TITLE>')"
+    "# create a seaborn scatterplot for our cluster data\n",
+    "\n",
+    "# Give it a more different title\n"
    ]
   },
   {
@@ -373,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Substitute your own weight (in kg) and height (in cm) to predict which cluster you fall into.\n",
+    "# Cal weight (in kg) and height (in cm) to predict which cluster you fall into.\n",
     "kmeans_model.predict([[<YOUR WEIGHT KG>, <YOUR HEIGHT CM>]])"
    ]
   },
