Clean up descriptions

--- a/olympic_kmeans.ipynb
+++ b/olympic_kmeans.ipynb
@@ -31,9 +31,7 @@
     "\n",
     "K-means clustering works well on data sets with points that are distinct or well-separated from each other in a linear fashion. For picking the number of centroids, it is useful to pick a *k* value that is well-defined in the data already.\n",
     "\n",
-    "Datasets that have a lot of overlap, outliers, and noise do not lend themselves well to k-means clustering.\n",
-    "\n",
-    "<!-- Also talk about local minima -->"
+    "Datasets that have a lot of overlap, outliers, and noise do not lend themselves well to k-means clustering."
    ]
   },
   {
@@ -71,7 +69,6 @@
    "source": [
     "# Imports go here\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy\n",
     "import pandas as pd\n",
     "import seaborn as seaborn\n",
     "from sklearn.cluster import KMeans"
@@ -91,7 +88,7 @@
    "outputs": [],
    "source": [
     "# Create a pandas DataFrame object from a CSV of Olympian data\n",
-    "olympian_data = pd.read_csv(\n",
+    "olympian_df = pd.read_csv(\n",
     "    'data/athlete_events.csv',\n",
     "    usecols=[\n",
     "        'Name',\n",
@@ -110,7 +107,7 @@
    "source": [
     "Above, we have imported our Olympian data in our CSV file into a data structure called a pandas [DataFrame](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html). Pandas is a popular library for data science. You can think of a DataFrame as a spreadsheet: it organizes the data into rows and columns for sorting, slicing, and filtering.\n",
     "\n",
-    "Try running the `head()` method on our dataframe below:"
+    "We can also use `describe` to see some statistics about our DataFrame values:"
    ]
   },
   {
@@ -119,15 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By default, will return the first 5 rows\n",
-    "olympian_data.head()"
+    "# call DataFrame.describe\n",
+    "olympian_df.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also use `describe()` to see some statistics about our DataFrame values:"
+    "To see some of the data, let's try running the `head` method on our dataframe below:"
    ]
   },
   {
@@ -136,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How about describing our data?\n",
-    "olympian_data.describe()"
+    "# By default, head will return the first 5 rows\n",
+    "olympian_df.head(10)"
    ]
   },
   {
@@ -155,8 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pass in a list of columns where you want to remove duplicate values\n",
-    "olympian_data = olympian_data.drop_duplicates(subset=['Name', 'Sport'])"
+    "# Pass in a list of columns to DataFrame.drop_duplicates where you want to remove duplicate values\n",
+    "olympian_df.drop_duplicates(subset=['Name', 'Sport'], inplace=True)"
    ]
   },
   {
@@ -172,8 +169,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove rows with missing values using the dropna() method\n",
-    "olympian_data.dropna(inplace=True)"
+    "# Remove rows with missing values using the DataFrame.dropna method\n",
+    "olympian_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the first ten rows to see if you removed the duplicate and NaN rows:\n",
+    "olympian_df.head(10)"
    ]
   },
   {
@@ -187,8 +194,8 @@
     "We're going to want to cluster by two sports (k=2), so first, let's take a look at all the sports we have in our `Sport` column of the DataFrame.\n",
     "\n",
     "There are two ways to slice a DataFrame by its column:\n",
-    "* Dot notation: `olympian_data.Sport`\n",
-    "* Bracket notation: `olympian_data['Sport']`"
+    "* Dot notation: `olympian_df.Sport`\n",
+    "* Bracket notation: `olympian_df['Sport']`"
    ]
   },
   {
@@ -197,8 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try sorting the data and calling `.unique()`\n",
-    "sorted(olympian_data.Sport.unique())"
+    "# Try sorting the data and calling unique on the DataFrame column values you want to see\n",
+    "sorted(olympian_df.Sport.unique())"
    ]
   },
   {
@@ -214,10 +221,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "two_sports = olympian_data[((olympian_data.Sport == 'Basketball') \n",
-    "                            & (olympian_data.Sex == 'M')) | \n",
-    "                           ((olympian_data.Sport == 'Gymnastics') \n",
-    "                            & (olympian_data.Sex == 'F'))]"
+    "# Create a two_sports DataFrame with data for Men's Basketball and Women's Gymnastics athletes\n",
+    "two_sports = olympian_df[((olympian_df.Sport == 'Basketball') \n",
+    "                            & (olympian_df.Sex == 'M')) | \n",
+    "                         ((olympian_df.Sport == 'Gymnastics') \n",
+    "                            & (olympian_df.Sex == 'F'))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll be using `seaborn` and `matplotlib` to plot our data. If we make scatterplot of our data, we can see two distinct groups: Men's Basketball athletes and Women's Gymnastics athletes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a seaborn.scatterplot with our two_sports DataFrame data\n",
+    "seaborn.scatterplot(\n",
+    "    'Weight',\n",
+    "    'Height',\n",
+    "    data=two_sports[['Weight', 'Height', 'Sport']],\n",
+    "    hue=\"Sport\",\n",
+    ")\n",
+    "# Give it a title\n",
+    "plt.title('Athletes, grouped by Sport')"
    ]
   },
   {
@@ -226,7 +258,7 @@
    "source": [
     "## Chapter 3: Clustering!\n",
     "\n",
-    "Now that we have data that should filter into two groups (Men's Basketball and Women's Gymnastics), it's time to cluster. We are using scikit-learn's `KMeans` method to create a KMeans model. We need to pass in an `n_clusters` argument to tell it how many centroids to cluster around.\n",
+    "Now that we have data that should filter into two groups (Men's Basketball and Women's Gymnastics), it's time to cluster. We are using scikit-learn's `KMeans` method to create a KMeans model. We need to pass in an `n_clusters` argument to tell it how many centroids to cluster around. `random_state` lets us all start with the same initialized centroids.\n",
     "\n",
     "We want to call the `fit()` method passing in the DataFrame columns that we want the clustering algorithm to use, in this case: `Weight` and `Height`."
    ]
@@ -237,8 +269,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the KMeans model & fit it to our two_sports DataFrame data\n",
     "kmeans_model = KMeans(\n",
-    "    n_clusters=2\n",
+    "    n_clusters=2,\n",
+    "    random_state=4,\n",
     ").fit(\n",
     "    two_sports[['Weight', 'Height']]\n",
     ")"
@@ -257,6 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Call KMeans.n_iter_ to see how many iterations it took\n",
     "kmeans_model.n_iter_"
    ]
   },
@@ -273,6 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Call KMeans.cluster_centers_ to see the centroid coordinates\n",
     "kmeans_model.cluster_centers_"
    ]
   },
@@ -291,7 +327,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Call KMeans.predict with our two_sports data to see which cluster each datapoint is assigned to\n",
     "predictions = kmeans_model.predict(two_sports[['Weight', 'Height']])\n",
+    "\n",
+    "# Add a \"Prediction\" column to the two_sports DataFrame with the cluster assignment\n",
     "two_sports = two_sports.assign(Prediction=predictions)"
    ]
   },
@@ -308,6 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# View a slice of our data with DataFrame.iloc()\n",
     "two_sports.iloc[10:30]"
    ]
   },
@@ -315,30 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter 4: Let's plot!\n",
-    "We'll be using `seaborn` and `matplotlib` to plot our data. First, let's graph our actual data, coloring the datapoints by their sport. As you can see, there are two distinct groups: Men's Basketball athletes and Women's Gymnastics athletes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seaborn.scatterplot(\n",
-    "    'Weight',\n",
-    "    'Height',\n",
-    "    data=two_sports[['Weight', 'Height', 'Sport']],\n",
-    "    hue=\"Sport\",\n",
-    ")\n",
-    "# title\n",
-    "plt.title('Athletes, grouped by Sport')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Chapter 4: Let's plot\n",
     "Finally, let's plot our data using the `prediction` column that we added earlier. Instead of coloring the plots by Sport, we will color by which cluster the k-means algorithm predicts they will fall into.\n",
     "\n",
     "Compare the resulting plot to the one above. How similar are the k-means clusters to the actual sports data?"
@@ -350,13 +367,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a new seaborn.scatterplot, this time coloring by the Prediction data\n",
     "seaborn.scatterplot(\n",
     "    'Weight',\n",
     "    'Height',\n",
     "    data=two_sports[['Weight', 'Height', 'Prediction']],\n",
     "    hue=\"Prediction\"\n",
     ")\n",
-    "# title\n",
+    "# Give it a more different title\n",
     "plt.title('Athletes in predicted clusters')"
    ]
   },
