--- a/olympic_kmeans_follow_along.ipynb
+++ b/olympic_kmeans_follow_along.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# K-Means Clustering with Python: FOLLOW ALONG VERSION\n",
+    "# K-Means Clustering with Python\n",
     "\n",
     "## Objectives\n",
     "After this workshop, you will be able to:\n",
@@ -31,9 +31,7 @@
     "\n",
     "K-means clustering works well on data sets with points that are distinct or well-separated from each other in a linear fashion. For picking the number of centroids, it is useful to pick a *k* value that is well-defined in the data already.\n",
     "\n",
-    "Datasets that have a lot of overlap, outliers, and noise do not lend themselves well to k-means clustering.\n",
-    "\n",
-    "<!-- Also talk about local minima -->"
+    "Datasets that have a lot of overlap, outliers, and noise do not lend themselves well to k-means clustering."
    ]
   },
   {
@@ -69,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports here, please:\n"
+    "# Imports go here\n"
    ]
   },
   {
@@ -85,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a pandas DataFrame object from a CSV of Olympian data in 'data/athlete_events.csv'\n",
-    "# use columns = ['Name', 'Sex', 'Height', 'Weight', 'Sport', 'Team']\n"
+    "# Create a pandas DataFrame object from a CSV of Olympian data\n"
    ]
   },
   {
@@ -95,7 +92,7 @@
    "source": [
     "Above, we have imported our Olympian data in our CSV file into a data structure called a pandas [DataFrame](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html). Pandas is a popular library for data science. You can think of a DataFrame as a spreadsheet: it organizes the data into rows and columns for sorting, slicing, and filtering.\n",
     "\n",
-    "Try running the `head()` method on our dataframe below:"
+    "We can also use `describe` to see some statistics about our DataFrame values:"
    ]
   },
   {
@@ -104,15 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By default, will return the first 5 rows\n",
-    "# Try running head() on the olympian_data DataFrame:\n"
+    "# call DataFrame.describe\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also use `describe()` to see some statistics about our DataFrame values:"
+    "To see some of the data, let's try running the `head` method on our dataframe below:"
    ]
   },
   {
@@ -121,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to describe() our data\n"
+    "# By default, head will return the first 5 rows\n"
    ]
   },
   {
@@ -139,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pass in a list of columns where you want to remove duplicate values\n"
+    "# Pass in a list of columns to DataFrame.drop_duplicates where you want to remove duplicate values\n"
    ]
   },
   {
@@ -155,7 +151,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove rows with missing values using the dropna() method\n"
+    "# Remove rows with missing values using the DataFrame.dropna method\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the first ten rows to see if you removed the duplicate and NaN rows:\n"
    ]
   },
   {
@@ -169,8 +174,8 @@
     "We're going to want to cluster by two sports (k=2), so first, let's take a look at all the sports we have in our `Sport` column of the DataFrame.\n",
     "\n",
     "There are two ways to slice a DataFrame by its column:\n",
-    "* Dot notation: `olympian_data.Sport`\n",
-    "* Bracket notation: `olympian_data['Sport']`"
+    "* Dot notation: `olympian_df.Sport`\n",
+    "* Bracket notation: `olympian_df['Sport']`"
    ]
   },
   {
@@ -179,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try sorting the data and calling `.unique()`\n"
+    "# Try sorting the data and calling unique on the DataFrame column values you want to see\n"
    ]
   },
   {
@@ -195,8 +200,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use filtering conditions to make a new dataframe containing data from\n",
-    "# Men's Basketball and Women's Gymnastics \n"
+    "# Create a two_sports DataFrame with data for Men's Basketball and Women's Gymnastics athletes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll be using `seaborn` and `matplotlib` to plot our data. If we make scatterplot of our data, we can see two distinct groups: Men's Basketball athletes and Women's Gymnastics athletes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a seaborn.scatterplot with our two_sports DataFrame data\n",
+    "\n",
+    "# Give it a title\n"
    ]
   },
   {
@@ -205,7 +227,7 @@
    "source": [
     "## Chapter 3: Clustering!\n",
     "\n",
-    "Now that we have data that should filter into two groups (Men's Basketball and Women's Gymnastics), it's time to cluster. We are using scikit-learn's `KMeans` method to create a KMeans model. We need to pass in an `n_clusters` argument to tell it how many centroids to cluster around.\n",
+    "Now that we have data that should filter into two groups (Men's Basketball and Women's Gymnastics), it's time to cluster. We are using scikit-learn's `KMeans` method to create a KMeans model. We need to pass in an `n_clusters` argument to tell it how many centroids to cluster around. `random_state` lets us all start with the same initialized centroids.\n",
     "\n",
     "We want to call the `fit()` method passing in the DataFrame columns that we want the clustering algorithm to use, in this case: `Weight` and `Height`."
    ]
@@ -216,8 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a variable kmeans_model and set it equal to the output of KMeans()\n",
-    "# with 2 clusters and fit to two sports[['Weight', 'Height']]\n"
+    "# Create the KMeans model & fit it to our two_sports DataFrame data\n"
    ]
   },
   {
@@ -233,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the n_inter_ property on the kmeans_model\n"
+    "# Call KMeans.n_iter_ to see how many iterations it took\n"
    ]
   },
   {
@@ -249,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the cluster_centers_ attribute on the kmeans_model"
+    "# Call KMeans.cluster_centers_ to see the centroid coordinates\n"
    ]
   },
   {
@@ -267,10 +288,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the predict() method, passing in two_sports[['Weight', 'Height']]\n",
+    "# Call KMeans.predict with our two_sports data to see which cluster each datapoint is assigned to\n",
     "\n",
-    "\n",
-    "# Assign the \"prediction\" column to the predictions array with the assign() method\n"
+    "# Add a \"Prediction\" column to the two_sports DataFrame with the cluster assignment\n"
    ]
   },
   {
@@ -286,32 +306,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try slicing with iloc!\n"
+    "# View a slice of our data with DataFrame.iloc()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter 4: Let's plot!\n",
-    "We'll be using `seaborn` and `matplotlib` to plot our data. First, let's graph our actual data, coloring the datapoints by their sport. As you can see, there are two distinct groups: Men's Basketball athletes and Women's Gymnastics athletes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a seaborn scatterplot for our original two_sports data\n",
-    "\n",
-    "# Give it a title\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Chapter 4: Let's plot\n",
     "Finally, let's plot our data using the `prediction` column that we added earlier. Instead of coloring the plots by Sport, we will color by which cluster the k-means algorithm predicts they will fall into.\n",
     "\n",
     "Compare the resulting plot to the one above. How similar are the k-means clusters to the actual sports data?"
@@ -323,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a seaborn scatterplot for our cluster data\n",
+    "# Create a new seaborn.scatterplot, this time coloring by the Prediction data\n",
     "\n",
     "# Give it a more different title\n"
    ]
@@ -345,18 +347,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cal weight (in kg) and height (in cm) to predict which cluster you fall into.\n",
-    "kmeans_model.predict([[<YOUR WEIGHT KG>, <YOUR HEIGHT CM>]])"
+    "# Substitute your own weight (in kg) and height (in cm) to predict which cluster you fall into.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?\n",
-    "\n",
-    "Text me at {{MY_NUMBER}} to tell me which sport you're more likely to compete in!\n",
-    "\n",
     "Which cluster did it output for your given statistics? Are you more likely to be a gymnast or a basketball player?\n",
     "\n",
     "**For fun**: Text me at MY_NUMBER to tell me which sport you're more likely to compete in!\n",
